# greek-orthodox-fast-calendar

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: planner2024-en.ics
greek_orthodox_fast_calendar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
