[project]
name = "greek-orthodox-fast-calendar"
version = "0.1.0"
description = """
Extracts the fasting events from the Greek Orthdox Planner calendar,
and creates a new calendar of only those events
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ics>=0.7.2",
    "requests>=2.32.3",
    "ruff>=0.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
